nginx-livedemo/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
spec:
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: app
          image: ghcr.io/learnk8s/f5-microservices-march-three
          imagePullPolicy: Never
          ports:
            - containerPort: 80
