nginx-livedemo/app-ingress-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: app
